src/components/DetailCard/style.css
.detailContainer {
    z-index: 2;
    background-color: #ffffff;
    width: 45rem;
    height: 45rem;
    padding: 30px;
    overflow: hidden;
    position: absolute;
    display: none;
    top: 0;
    right: 0;
    transform: translateX(100%);
    animation: dismove .3s ease;
    border-radius: 25px;
}

@keyframes dismove {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(100%);
    }
}

.detailContainer.active {
    animation: move .3s ease;
    transform: translateX(0);
    display: block;
}

@keyframes move {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(0);
    }
}

.detailContainer .title {
    font-size: 30px;
    font-weight: 600;
    line-height: 30px;
}

.detailContainer p {
    font-size: 18px;
    margin-bottom: 25px;
}

.detailContainer img {
    width: 100%;
    max-height: 30rem;
    border-radius: 10px;
    object-fit: cover;
}

